# gptool

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/basic/: README.md
examples/basic/src/: main.py
examples/basic/src/functions/get_current_weather/: function.py
examples/video_search/: README.md
examples/video_search/src/: main.py
examples/video_search/src/functions/movie/get_movie_details/: function.py
examples/video_search/src/functions/movie/get_popular_movies/: function.py  types.py
examples/video_search/src/functions/movie/get_similar_movies/: function.py  types.py
examples/video_search/src/functions/movie/search_movies/: function.py  test.json  types.py
examples/video_search/src/functions/person/get_person_details/: function.py  types.py
examples/video_search/src/functions/person/search_people/: function.py  test.json  types.py
gptool/: config.py  gptool.py
gptool/services/: defaultvectordb_service.py  openai_service.py
gptool/types/: abstract_vectordb.py  function.py
gptool/utils/: file_utilities.py  logger.py
