[tool.poetry]
name = "gptool"
version = "0.1.0"
description = "A compact tool for OpenAI API, offering streamlined function management and efficient API tool(function calling) usage through Pydantic validation and vector database indexingg."
authors = ["zhongwei <lizhongwei.nkcs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
openai = ">=1.3.0"
pydantic = ">=1.6,<=1.10.12"
qdrant-client = ">=1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
